fix: align about text to top

--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -33,6 +33,7 @@
     // padding: $space-lg 0 $space-xl;
     // padding: 0 0 $space-xl;
     margin-block-end: 0;
+    margin-top: 0;
     line-height: $space-xl;
 
     white-space: pre-line;
